# test-deep-research-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
reports/open_deep_research/sealqa/seal_0/test/20250918_151551/: progress.json
reports/small_search_agent/sealqa/seal_0/test/20250919_142659/: progress.json  results.jsonl  run.json
src/agents/: open_deep_research_cli.py  small_search_agent_cli.py
src/agents/open_deep_research/reports/open_deep_research/sealqa/seal_0/test/20250918_133920/: run.json
src/agents/open_deep_research/src/open_deep_research/: configuration.py  deep_researcher.py  utils.py
src/agents/scripts/: clone_open_deep_research.py  test_tavily.py
src/agents/small_search_agent/: main.py  pyproject.toml
src/benchmarks/: download_sealqa.py
src/evals/: run_benchmark.py
